tests/ui/issues/issue-42312.stderr
error[E0277]: the size for values of type `<Self as Deref>::Target` cannot be known at compilation time
  --> $DIR/issue-42312.rs:4:15
   |
LL |     fn baz(_: Self::Target) where Self: Deref {}
   |               ^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `<Self as Deref>::Target`
   = help: unsized fn params are gated as an unstable feature
help: consider further restricting the associated type
   |
LL |     fn baz(_: Self::Target) where Self: Deref, <Self as Deref>::Target: Sized {}
   |                                              ++++++++++++++++++++++++++++++++
help: function arguments must have a statically known size, borrowed types always have a known size
   |
LL |     fn baz(_: &Self::Target) where Self: Deref {}
   |               +

error[E0277]: the size for values of type `(dyn ToString + 'static)` cannot be known at compilation time
  --> $DIR/issue-42312.rs:8:13
   |
LL | pub fn f(_: dyn ToString) {}
   |             ^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn ToString + 'static)`
   = help: unsized fn params are gated as an unstable feature
help: you can use `impl Trait` as the argument type
   |
LL - pub fn f(_: dyn ToString) {}
LL + pub fn f(_: impl ToString) {}
   |
help: function arguments must have a statically known size, borrowed types always have a known size
   |
LL | pub fn f(_: &dyn ToString) {}
   |             +

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
